--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -4,7 +4,7 @@ name: Generate Snake
 # Controls when the action will run.
 on:
   schedule:
-      # every 12 hours
+      # every  hour
     - cron: "0 * * * *"
 
   # This command allows us to run the Action automatically from the Actions tab.
